@@ -39,30 +39,6 @@
               <td>
                 <img src="[% url_prefix %]themes/[% theme %]/images/[% IF fav_counter %]favicon_nocounter.png[% ELSE %]favicon_counter.png[% END %]" alt="[% IF fav_counter %]counter is on[% ELSE %]counter is off[% END %]" width=16 height=16 style="vertical-align:top;">
                 <input type="button" name="submit" value="[% IF fav_counter %]counter is on[% ELSE %]counter is off[% END %]" onClick="prefSubmitCounter(full_uri, '[% IF fav_counter %]off[% ELSE %]on[% END %]')">
-                <script type="text/javascript">
-                <!--
-                    try {
-                        if(window.parent.frames && top.frames['side']) {
-                            top.frames['side'].is_reloading = undefined;
-                            top.frames['side'].load_errors  = 0;
-                        }
-                    }
-                    catch(e) { debug(e); }
-
-                [%+ IF fav_counter +%]
-                [% totals = set_favicon_counter(c) %]
-                  [%+ IF totals.red > 0 && totals.yellow == 0 && totals.orange == 0 +%]
-                    updateFaviconCounter([% totals.red %], '#FF5B33');
-                  [%+ ELSIF totals.red == 0 && totals.yellow > 0 && totals.orange == 0 +%]
-                    updateFaviconCounter([% totals.yellow %], '#FFDE00');
-                  [%+ ELSIF totals.red == 0 && totals.yellow == 0 && totals.orange > 0 +%]
-                    updateFaviconCounter([% totals.orange %], '#FF9E00');
-                  [%+ ELSE +%]
-                    updateFaviconCounter([% totals.red + totals.yellow + totals.orange %], '#FF9E00');
-                  [%+ END +%]
-                [%+ END +%]
-                -->
-                </script>
               </td>
             </tr>
             [% IF c.config.exists('use_feature_reports') && c.config.use_feature_reports %]
