@@ -3,6 +3,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 next:
           - autocomplete custom variables values if exposed by show_custom_vars
           - fix filtering for empty custom variables
+          - fix problems favicon counter
 
 2.14     Tue Mar 28 10:09:25 CEST 2017
           - add new Thruk2 theme
